--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-04-25  Martin Baulig  <martin@ximian.com>
 
+	* backends/BreakpointManager.cs
+	(BreakpointManager.RemoveAllBreakpoints): New public method.
+
+2006-04-25  Martin Baulig  <martin@ximian.com>
+
 	* backends/MonoThreadManager.cs
 	(MonoMetadataInfo): New internal struct; splitted out from
 	`MonoBuiltinTypeInfo' in MonoLanguageBackend.cs.
