2006-05-03  Martin Baulig  <martin@ximian.com>
	* frontend/Command.cs (DebuggerCommand.Execute): Always resolve
	the command before executing it; also when repeating it.


svn path=/trunk/debugger/; revision=60227

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-05-03  Martin Baulig  <martin@ximian.com>
 
+	* frontend/Command.cs (DebuggerCommand.Execute): Always resolve
+	the command before executing it; also when repeating it.
+
+2006-05-03  Martin Baulig  <martin@ximian.com>
+
 	* backends/Inferior.cs (Inferior.Kill): Check errors.
 
 	* backends/SingleSteppingEngine.cs
