2006-05-11  Martin Baulig  <martin@ximian.com>
	* arch/Architecture.cs
	(Architecture.AdjustReturnAddress): New protected method; adjust
	the return address, so we report the line of the call and not the
	return address in stack traces.
	(Architecture.CreateFrame): Call AdjustReturnAddress().

	* test/testsuite/TestException.cs: Added test case for it.


svn path=/trunk/debugger/; revision=60561

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,13 @@
+2006-05-11  Martin Baulig  <martin@ximian.com>
+
+	* arch/Architecture.cs
+	(Architecture.AdjustReturnAddress): New protected method; adjust
+	the return address, so we report the line of the call and not the
+	return address in stack traces.
+	(Architecture.CreateFrame): Call AdjustReturnAddress().
+
+	* test/testsuite/TestException.cs: Added test case for it.
+
 2006-05-10  Martin Baulig  <martin@ximian.com>
 
 	* classes/DebuggerMarshalByRefObject.cs
