--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2006-05-11  Martin Baulig  <martin@ximian.com>
 
+	* frontend/Expression.cs
+	(PointerDereferenceExpression): Allow dereferencing arbitrary
+	pointer expressions.
+
+2006-05-11  Martin Baulig  <martin@ximian.com>
+
 	* backends/ThreadManager.cs
 	(ThreadManager.WaitTimeout): Increase to 5 seconds.
 
