--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2006-05-12  Martin Baulig  <martin@ximian.com>
 
+	* NEWS: Update: we need the latest Mono from SVN; just realized
+	that 1.1.15 is too old and does not work.
+
+2006-05-12  Martin Baulig  <martin@ximian.com>
+
 	* frontend/Command.cs (FileCommand): Added error checking.
 	(SetCommand.SetArgsCommand): Added `set args' command.
 	(SetCommand.DoResolve): Properly handle the subcommands.
