--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2006-05-20  Martin Baulig  <martin@ximian.com>
+
+	* frontend/Command.cs
+	(SourceCommand.DoResolve): Also lookup native methods.
+	(BreakCommand): Add `-global' argument as a shortcut for
+	`-group global'.
+
 2006-05-17  Martin Baulig  <martin@ximian.com>
 
 	* frontend/Interpreter.cs
